<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/buttonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dodaj" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/delete" />

            <Button
                android:id="@+id/buttonCompile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compile" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/recyclerView"
            android:layout_below="@+id/buttonsContainer"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/textViewNazwa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/nazwa"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewKategoria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/kategoria"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttonsContainer"
        android:layout_marginTop="90dp"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center"
        tools:ignore="NotSibling" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>